<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- 固定版本，必须写 -->
    <modelVersion>4.0.0</modelVersion>

    <!-- 1. 引入Spring Boot父工程（核心：版本管理、默认配置继承） -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.15</version> <!-- 稳定版本，与JJWT 0.11.5、MyBatis 2.3.0兼容 -->
        <relativePath/> <!-- 不从本地仓库找，直接从中央仓库拉取 -->
    </parent>

    <!-- 2. 当前模块的基本信息（必写） -->
    <groupId>com.reservation</groupId> <!-- 自定义：公司/组织+项目名 -->
    <artifactId>api</artifactId>  <!-- 模块名，对应文件夹名api -->
    <version>1.0.0-SNAPSHOT</version> <!-- 版本号：快照版（开发中）/RELEASE（正式版） -->
    <name>api</name>
    <description>lesson booking API</description>

    <!-- 3. 基础属性配置（统一编码、JDK版本） -->
    <properties>
        <java.version>1.8</java.version> <!-- 适配主流JDK版本 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- 统一依赖版本（便于后续维护） -->
        <mybatis-spring-boot.version>2.3.0</mybatis-spring-boot.version>
        <mysql-connector.version>8.0.33</mysql-connector.version>
        <jjwt.version>0.11.5</jjwt.version>
        <spring-boot.version>2.7.15</spring-boot.version>
         <mainClass>com.language.reservation.LanguageReservationApplication</mainClass>
    </properties>

 

    <!-- 4. 依赖配置 -->
    <dependencies>
        <!-- pom.xml 基础依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>3.0.2</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>8.0.1.Final</version>
            </dependency>
          
          <dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-fxml</artifactId>
    <version>21</version>
</dependency>

        <!-- 数据校验（对应设计2.4 异常处理、参数校验） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- 权限控制（对应设计2.3 安全设计-RBAC模型） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- JWT Token（对应设计2.3 安全设计-Token加密）【升级为新版】 -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${jjwt.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- 数据库相关 -->
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>${mybatis-spring-boot.version}</version>
        </dependency>
     <!-- pom.xml 中修改 MySQL 驱动依赖 -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version> <!-- 适配 MySQL 5.7+/8.0+，支持 utf8mb4 -->
            <scope>runtime</scope>
        </dependency>

        <!-- 可选：单元测试依赖（建议补充，便于开发测试） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version> <!-- 推荐使用稳定版，可根据需求调整 -->
            <scope>provided</scope> <!-- 仅编译期生效，不打入最终包 -->
             <optional>true</optional>
        </dependency>

<!-- MyBatis-Plus -->
<dependency>
    <groupId>com.baomidou</groupId>
    <artifactId>mybatis-plus-boot-starter</artifactId>
    <version>3.5.3.1</version>
</dependency>

    </dependencies>
    <!-- 5. 构建配置（核心：Spring Boot打包插件，生成可执行JAR） -->
    <build>
    <sourceDirectory>. </sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <!-- 手动指定启动类全路径（和properties中保持一致） -->
                    <mainClass>${mainClass}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal> <!-- 打包为可执行JAR -->
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>